# Snake-Game

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Direction.hpp  Game.hpp  Pellet.hpp  Snake.hpp  Utilities.hpp  Vec2i.hpp
src/: Game.cpp  Pellet.cpp  Snake.cpp  Utilities.cpp  main.cpp
